[package]
name = "rust-sandbox"
edition = "2018"
version = "0.1.0"
authors = ["Guido Casiraghi <guido.casiraghi@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trie"
path = "src/trie.rs"

[[bin]]
name = "something"
path = "src/something.rs"

[[bin]]
name = "russian_train"
path = "src/russian_train.rs"

[[bin]]
name = "file_log_append"
path = "src/file_log_append.rs"

[[bin]]
name = "threads_exp"
path = "src/threads_exp.rs"

[[bin]]
name = "get_file_to_write"
path = "src/get_file_to_write.rs"

[[bin]]
name = "add_entry"
path = "src/add_entry.rs"

[[bin]]
name = "load_data"
path = "src/load_data.rs"

[[bin]]
name = "rust_programming_techniques"
path = "src/rust_programming_techniques.rs"

[[bin]]
name = "serde_test"
path = "src/serde_test.rs"

[dependencies]
rand = "0.7"
itertools = "0.9"
crossbeam-utils = "0.8"
tempfile = "3.1"
byteorder = "1.3"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"

